--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ template {
 }
 
 .screen-reader-text:focus {
-	background-color: #f1f1f1;
+	background-color: #A9A9A9;
 	border-radius: 3px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	clip: auto !important;
@@ -578,7 +578,7 @@ div.block {
 }
 .pagination span {
     display: inline-block;
-    padding: 10px 15px;
+    padding: 15px 20px;
     background: #bb8c4b;
     color: #333;
     border-radius: 100px;
